# hello-gl

./: CMakeLists.txt  CMakeSettings.json  GLFWwrapper.h  GLstate.h  README.md  Shader.h  hello-gl.cpp  vcpkg.json
gl_abstractions/: CMakeLists.txt
gl_abstractions/include/: gl_abstractions.h
gl_abstractions/src/: gl_job.cpp
include/: glad.h
redbook_lib/: CMakeLists.txt
redbook_lib/include/: LoadShaders.h  vgl.h
redbook_lib/src/: LoadShaders.cpp
resources/shaders/: triangle.fs.glsl  triangle.vs.glsl
shaders/: triangle.frag  triangle.fs.glsl  triangle.vert  triangle.vs.glsl  triangle_orange.frag
